--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "ical.js": "^1.5.0",
     "next": "13.3.0",
     "next-sanity": "^4.1.7",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "sanity": "^3.9.0",
     "typescript": "5.0.4"
   }
