--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "sanity": "^3.9.0",
+    "swiper": "^9.2.4",
     "typescript": "5.0.4"
   }
 }
