--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "sanity": "^3.9.0",
+    "styled-components": "5.2",
     "swiper": "^9.2.4",
     "typescript": "5.0.4"
   }
