--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/ui": "^1.3.2",
     "@types/node": "18.15.12",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
@@ -18,10 +19,11 @@
     "ical.js": "^1.5.0",
     "next": "13.3.0",
     "next-sanity": "^4.1.7",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-is": "^18.2.0",
     "sanity": "^3.9.0",
     "styled-components": "5.2",
     "swiper": "^9.2.4",
