parsed events better, start style module

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-GOOGLE_CAL_API=AIzaSyAH8bIpLvYODhOz5FjSJI24jDQHu7vvSJ8
+GOOGLE_CAL_API=AIzaSyBM5I_VppDg6j3FwUue8MK_YgnhHMLP2KY
 ARTEIRAS_CAL_ID=arteirasgallery@gmail.com
+
+DISCOVERY_DOC=https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest/
+SCOPES=https://www.googleapis.com/auth/calendar.readonly
