--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
+    "dropbox": "^10.34.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "ical.js": "^1.5.0",
