--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-is": "^18.2.0",
+    "react-social-media-embed": "^2.3.5",
     "sanity": "^3.9.0",
     "styled-components": "5.2",
     "swiper": "^9.2.4",
