--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "dotenv": "^16.0.3",
     "dropbox": "^10.34.0",
     "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
+    "eslint-config-next": "^13.4.2",
     "ical.js": "^1.5.0",
     "moment": "^2.29.4",
-    "next": "13.3.0",
+    "next": "^13.4.2",
     "next-sanity": "^4.1.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
